--- a/flask-cicd-demo/Jenkinsfile
+++ b/flask-cicd-demo/Jenkinsfile
@@ -2,36 +2,68 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_HUB_USER = 'your_dockerhub_username'
-        IMAGE_NAME = 'flask-cicd-app'
+        IMAGE_NAME = "kirankapikad/flask-cicd-demo"
+        IMAGE_TAG = "latest"
     }
 
     stages {
-        stage('Start') {
+
+        stage("🔄 Clone Code") {
             steps {
-                echo "✅ Code already checked out by Jenkins"
+                echo "📥 Cloning GitHub repository"
+                git url: "https://github.com/Kiran-Kapikad/Git_MD/flask-cicd-demo.git", branch: "main"
             }
         }
 
-        stage('Build Docker Image') {
+        stage("🐳 Build Docker Image") {
             steps {
-                sh 'docker build -t $DOCKER_HUB_USER/$IMAGE_NAME:latest ./flask-cicd-demo/app'
+                echo "🔧 Building Docker image"
+                sh "docker build -t $IMAGE_NAME:$IMAGE_TAG ./flask-cicd-demo/app"
             }
         }
 
-        stage('Push to Docker Hub') {
+        stage("📤 Push to Docker Hub") {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                    sh 'echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin'
-                    sh 'docker push $DOCKER_USER/$IMAGE_NAME:latest'
+                echo "🔐 Logging in and pushing image"
+                withCredentials([usernamePassword(credentialsId: "dockerhub-creds", usernameVariable: "DOCKER_USER", passwordVariable: "DOCKER_PASS")]) {
+                    sh '''
+                        echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                        docker push $IMAGE_NAME:$IMAGE_TAG
+                    '''
                 }
             }
         }
 
-        stage('Deploy to Kubernetes') {
+        stage("🚀 Deploy to Kubernetes") {
             steps {
-                echo "🧩 This is where kubectl apply -f deployment.yaml would run"
+                echo "⛴ Deploying using kubectl"
+                withKubeConfig(
+                    credentialsId: 'kubeconfig',
+                    serverUrl: '',
+                    clusterName: '',
+                    contextName: '',
+                    namespace: '',
+                    caCertificate: '',
+                    restrictKubeConfigAccess: false
+                ) {
+                    sh '''
+                        echo "📦 Applying deployment YAML"
+                        kubectl apply -f ./flask-cicd-demo/k8s/deployment.yaml
+
+                        echo "🌐 Applying service YAML"
+                        kubectl apply -f ./flask-cicd-demo/k8s/service.yaml
+                    '''
+                }
             }
+        }
+    }
+
+    post {
+        success {
+            echo "✅ Pipeline completed successfully!"
+        }
+        failure {
+            echo "❌ Pipeline failed! Check logs for details."
         }
     }
 }
